# fastapi_template

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2013e3cb44aa_description.py
app/: __init__.py  main.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  auth_mobile.py  auth_web.py  companies.py  jobs.py  recruiters.py  users.py
app/core/: config.py  database.py  dependencies.py  exceptions.py  logger.py  rate_limit_config.py  redis.py  security.py
app/core/database/: database.py
app/core/logging/: logger.py
app/core/redis/: redis.py
app/core/security/: security.py
app/middleware/: auth_middleware.py  rate_limiter.py  request_logging.py
app/middleware/auth_middleware/: auth_middleware.py
app/middleware/rate_limiter/: rate_limit_config.py  rate_limiter.py  request_logging.py
app/models/: __init__.py  applicant.py  application.py  company.py  job_position.py  recruiter.py  user.py
app/repositories/: application_repository.py  company_repository.py  job_repository.py  recruiter_repository.py  user_repository.py
app/schemas/: applicant.py  application.py  company.py  job_schema.py  recruiter.py  user.py  user_github.py
app/services/: __init__.py  application_service.py  auth_service.py  company_service.py  github_auth_service.py  job_service.py  mobile_auth_service.py  mobile_token_service.py  recruiter_service.py  token_service.py  user_service.py  web_auth_service.py
app/utils/: validators.py
