[project]
name = "fastapiprojecttomaster"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.116,<0.117",
  "uvicorn[standard]>=0.35,<0.36",        # если сборка extras падает, замените на: uvicorn>=0.35,<0.36
  "pydantic-settings>=2.10,<3.0",
  "pydantic[email]>=2.11,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "asyncpg>=0.30,<0.31",
  "alembic>=1.16,<2.0",
  "httpx>=0.28,<0.29",
  "structlog>=25,<26",
  "python-dotenv>=1.0,<2.0",
  "redis>=5,<6",
  "google-auth-oauthlib>=1.2,<2.0",
  "passlib>=1.7,<2.0",
  "pyjwt>=2.10,<3.0"
]
