[tool.poetry]
name = "fastapiprojecttomaster"
version = "0.1.0"
description = "RestFul API"
authors = ["You <you@example.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
fastapi = ">=0.116,<0.117"
uvicorn = { version = ">=0.35,<0.36", extras = ["standard"] }
pydantic = { version = ">=2.11,<3.0", extras = ["email"] }
pydantic-settings = ">=2.10,<3.0"
sqlalchemy = ">=2.0,<3.0"
asyncpg = ">=0.30,<0.31"
alembic = ">=1.16,<2.0"
httpx = ">=0.28,<0.29"
structlog = ">=25,<26"
python-dotenv = ">=1.0,<2.0"
redis = ">=5,<6"
google-auth-oauthlib = ">=1.2,<2.0"
passlib = ">=1.7,<2.0"
pyjwt = ">=2.10,<3.0"
bcrypt = ">=4.3.0,<5.0.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
limits = ">=5.5.0,<6.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.8"
ruff = "^0.6.3"
mypy = "^1.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
